<resources>
    <string name="app_name">InnKeeper</string>
    <string name="title_map">Map</string>
    <string name="title_search">Searcgh</string>
    <string name="title_favourite">Favourites</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
